Uppdaterade rapporten till RC1.

--- a/rapport/indaprojekt.tex
+++ b/rapport/indaprojekt.tex
@@ -34,7 +34,7 @@ Programmet skall underhålla och stjäla tid från användaren. Detta genom att 
 Programmet har lyckats uppfylla A, men erbjuder också så kallade ``power ups'' som ändrar spelupplevelsen under spelets gång och således kan verka ännu bättre för att skärpa användarens sinnen. Det kan till exempel röra sig om att bollen åker fortare eller långsammare, dödliga dödskallar som faller från skyn, extrabollar som gör entré eller liknande.
 
 \subsection{C}
-Egentligen är det inga direkta skillnader mellan programbeskrivningarna. ``Power ups'':en gör bara att användaren får koncentrera sig ännu mer än beräknat för att inte gå hädan samt att spelet (förmodligen) kommer underhålla och själa ännu mer tid.
+Egentligen är det inga direkta skillnader mellan programbeskrivningarna. ``Power ups'':en gör bara att användaren får koncentrera sig ännu mer än beräknat för att inte gå hädan, samt att spelet (förmodligen) är ännu bättre på att underhålla och själa tid.
 
 \section{Användarbeskrivning}
 
@@ -84,7 +84,7 @@ Nedan följer de två scenarierna från A, fast som de slutligen blev.
 	\item Blocken försvinner successivt i och med att bollen studsar på dem.
 	\item Alla block har slutligen försvunnit och användaren har därmed besegrat den nuvarande 'kartan'.
 	\item En ny karta presenteras (det vill säga, blocken är uppställda i en annan formation än tidigare).
-	\item Användaren väljer att avsluta spelet genom att trycka \texttt{Esc} för att få upp spelmenyn, välja \emph{Quit} för att komma till huvudmenyn och där välja \emph{Quit} igen för att avsluta spelet.
+	\item Användaren väljer att avsluta spelet genom att trycka \texttt{Esc} för att få upp spelmenyn, välja \emph{Back to Main Menu} för att komma till huvudmenyn och där välja \emph{Quit} igen för att avsluta spelet.
 \end{enumerate}
 
 \subsubsection{Scenario II}
@@ -97,11 +97,11 @@ Nedan följer de två scenarierna från A, fast som de slutligen blev.
 	\item Samma spelvy som i föregående scenario visas och användaren spelar på samma sätt.
 	\item Användaren är inte så pricksäker och lyckas inte få bollen att studsa på racketet. För varje gång han missar förlorar han ett 'liv'.
 	\item Användaren förlorar tre liv och därmed även spelet.
-	\item En meny med valen \emph{Play Again} och \emph{Quit} visas. Användaren väljer det sistnämnda för att komma tillbaka till huvudmenyn, och väljer där återigen \emph{Quit} för att avsluta spelet.
+	\item En meny med valen \emph{Play Again} och \emph{Back to Main Menu} visas. Användaren väljer det sistnämnda för att komma tillbaka till huvudmenyn, och väljer där återigen \emph{Quit} för att avsluta spelet.
 \end{enumerate}
 
 \subsection{C}
-För det första så är huvudmenyn utökad med ännu ett alternativ, nämligen \emph{High Score} som föga förvånande tar spelaren till listan över de högsta uppnådda poängen (detta gäller båda scenarierna). Den andra märkbara skillnaden är att \emph{Quit}-alternativet i den så kallade ``in game''-menyn nu tar spelaren tillbaka till huvudmenyn istället för att avsluta hela programmet (gäller också båda scenarierna). De två sista delarna som skiljer sig återfinns i Scenario II och är att man inte 'backar' i menyerna med \texttt{Esc}-knappen samt att alternativen som visas när man förlorat är färre.
+För det första så är huvudmenyn utökad med ännu ett alternativ, nämligen \emph{High Score} som föga förvånande tar spelaren till listan över de högsta uppnådda poängen (detta gäller båda scenarierna). Den andra märkbara skillnaden är att \emph{Back to Main Menu}-alternativet i den så kallade ``in game''-menyn som tar spelaren tillbaka till huvudmenyn har ersatt \emph{Quit}-alternativet, som skulle avslutat hela programmet (gäller också båda scenarierna). De två sista delarna som skiljer sig återfinns i Scenario II och är att man inte 'backar' i menyerna med \texttt{Esc}-knappen samt att alternativen som visas när man förlorat är färre.
 
 \section{Testplan}
 
@@ -119,9 +119,28 @@ Vi noterade dock följande saker under spelets gång:
 \begin{itemize}
 	\item Han kunde inte lista ut vad ``fireball''-powerup:en gjorde enbart baserat på dess ikon.
 	\item Poängen skall långsamt räkna ned hela tiden för att motivera spelaren att klara av kartorna så fort som möjligt, men ibland slutade den helt plötsligt med detta vilket förvirrade testpersonen. En bugg funnen med andra ord.
-	\item Han försökte mitt i spelet pausa spelet genom att öppna ``in game''-menyn, vilket han misslyckades med då en sådan inte var implementerad vid testtillfället. Vi noterade dock att han försökte få fram den genom att trycka på \texttt{Esc}-tangenten.
+	\item Han skulle mitt i spelet pausa spelet genom att öppna ``in game''-menyn, vilket han misslyckades med då en sådan inte var implementerad vid testtillfället. Vi noterade dock att han försökte få fram den genom att trycka på \texttt{Esc}-tangenten utan att det var förklarat någonstans vilket indikerar på bra val av tangent.
 	\item När han klarat alla banor och skulle ange sitt namn poppade inmatningsdialogen upp i \emph{bakgrunden} istället för längst fram vilket gjorde att spelet först såg ut att ha kraschat. Testpersonen insåg dock snabbt vad som hade hänt -- datorvan som han är -- och letade upp inmatningsrutan.
 	\item Medan dialogen för inmatning av namn var uppe fick han syn på att det i spelet stod att han fortfarande hade ett liv kvar vilket han snabbt påpekade. Det visade sig att texten inte uppdaterar sig sista gången vilket kan skapa förvirring.
+\end{itemize}
+
+Den andre testpersonen var också en datorvan typ i 20-årsåldern. Liksom testperson nummer ett försökte han få upp en meny medan han spelade, vilket konstaterats inte fungerar än, men han kommenterade även följande:
+
+\begin{itemize}
+	\item Han tyckte det var svårt att gissa vad de olika powerups:en gjorde.
+	\item Det var oklart när han kunde skjuta laser eller inte.
+	\item När det blev många objekt på skärmen -- många bollar och powerup:s i rörelse -- tenderade det att bli rörigt, och svårt att snabbt avgöra vilka powerup:s att ta och vilka att låta bli.
+\end{itemize}
+
+\subsection{C}
+Skillnaden mellan den planerade testningen och den utförda är marginella. Den enda egentliga är att uppdraget ``få mer än 100,000 poäng'' lades till vid det första användartestet för att motivera användaren.
+
+Användartestningen har dock givit oss en hel del värdefull information om hur spelet kan förbättras:
+
+\begin{itemize}
+	\item Vi har insett att det kan vara en bra idé att förklara vad de olika powerups:en gör i hjälpmenyn, så att användaren kan känna igen dem och ha ett hum om vad de gör när spelet väl är igång.
+	\item Indikationen på att man kan skjuta laser kan göras tydligare.
+	\item De upptäckta buggarna skall lösas.
 \end{itemize}
 
 \section{Programdesign}
@@ -148,6 +167,8 @@ Vi höll oss till biblioteket Slick, men klasstrukturen skiljer sig en del från
 	\item \texttt{Movable}: Ett interface med metoden \texttt{move}, där implementerande klasser får beskriva hur objektets position skall uppdateras.
 	\item \texttt{HighscoreHandler, Score}: Den förstnämnda har hand om själva highscorelistan, och att läsa och skriva den till en fil. Varje poäng representeras av ett \texttt{Score}-objekt, som innehåller poängen samt namnet på spelaren som uppnått dem.
 	\item \texttt{Player}: Representerar spelaren med ett namn, hur många liv spelaren har kvar samt dennes poäng.
+	\item \texttt{SoundPlayer}: Sköter uppspelning av ljud. Har en metod för varje ljud som används i spelet.
+	\item \texttt{ResourceLoader}: Laddar in alla bilder för snabb åtkomst. Har den ovärderliga metoden \texttt{load} som gör detta.
 	\item \texttt{BreakoutGame}: 'Huvudklassen' som innehåller \texttt{main}-metoden.
 \end{itemize}
 
@@ -161,6 +182,8 @@ De huvudsakliga skillnaderna i punktform:
 	\item Den abstrakta klassen \texttt{GameObject} togs helt bort och ersattes med Slick-bibliotekets \texttt{Shape}-underklasser, detta för att göra kollisionsdetekteringen mer solid.
 	\item Den tänkta klassen \texttt{Highscore} förkastades och istället skapades \texttt{HighScoreHandler} samt \texttt{Score}.
 	\item Klassen \texttt{Player} skapades för att representera spelaren.
+	\item Klassen \texttt{SoundPlayer} skapades för ljuduppspelning.
+	\item Klassen \texttt{ResourceLoader} skapades för bildinladdning.
 \end{itemize}
 
 \section{Tekniska frågor}
@@ -176,7 +199,7 @@ Nedan följer en lista med tänkbara tekniska problem och eventuella lösningar.
 
 \subsection{B}
 \begin{description}
-	\item[Problem:] Vid eventuellt bildbyte på objekt medan spelet körs (till exempel om ett block kräver flera bollstudsar för att försvinna) skulle en viss fördröjning kunna uppstå innan programmet har läst in den nya bilden. \textbf{Löstes så här:} Ingen synlig fördröjning noterades (förmodligen för att bilderna är såpass små) så detta var inget problem.
+	\item[Problem:] Vid eventuellt bildbyte på objekt medan spelet körs (till exempel om ett block kräver flera bollstudsar för att försvinna) skulle en viss fördröjning kunna uppstå innan programmet har läst in den nya bilden. \textbf{Löstes så här:} Klassen \texttt{ResourceLoader} skapades som vid programstart får ladda in samtliga bilder för att ha dem i beredskap.
 	\item[Problem:] Hur 'kartorna' skall representeras. \textbf{Löstes så här:} Kartorna skapades med hjälp av programmet \emph{Tiled Map Editor} (http://www.mapeditor.org/), och informationen om dem sparades i XML-format. För att ladda en bana läses bara dess respektive XML-fil in och \texttt{Block}-objekt skapas efter informationen i filen.
 	\item[Problem:] Exakt vilka klasser som skall finnas och vad var och en skall sköta i spelet, samt undvika att skapa klasser det redan finns motsvarigheter till i spelbiblioteket. \textbf{Löstes så här:} Själva konceptet 'objektorientering' har vi fått träna på allteftersom arbetet fortskridit för att inte koden skall bli alltför gräslig. Slicks dokumentation har studerats mer eller mindre som planerat.
 	\item[Problem:] Hur skall programmet bete sig om någon väsentlig fil saknas? \textbf{Löstes så här:} Ljudfil - meddela användaren, highscorefil - skapa en ny fil utan att meddela användaren, kartfil eller bildfil - meddela användaren och avsluta.
@@ -203,12 +226,16 @@ Arbetsplanen är upplagd på följande vis:
 \subsection{B}
 Vi låg i fas med den förbestämda arbetsplanen i princip genom hela arbetet. Uppdelningen skedde spontant allt eftersom vad vi kände för att göra och vad som behövde göras. I stora drag hade Anders hand om menyerna, kollisionshanteringen och poängsystemet, medan Fredrik fixade ``power ups'':en och kartorna.
 
+\subsection{C}
+Då arbetsplanen inte behövde ändras är det ingen skillnad mellan A och B.
+
 \section{Sammanfattning}
-Vi har lärt oss mycket av projektet;
+Vi har lärt oss mycket av projektet, här är de viktigaste punkterna:
 
 \begin{description}
 	\item[Versionshantering] Då vi använde programmet \emph{Git} för att hålla ordning på alla uppdateringar som gjordes har vi fått lära oss (grundläggande) om hur den typen av mjukvara fungerar och hur det är att arbeta tillsammans på ett projekt.
 	\item[Tredjepartsbibliotek] Som nämnt tidigare i texten användes spelbiblioteket \emph{Slick} vilket har gjort oss tvungna att ta reda på hur man importerar ett tredjepartsbibliotek i Java (eller kanske främst hur det går till med utvecklingsverktyget \emph{Eclipse}) samt gräva i dokumentationen för att få ett hum om hur det är uppbyggt.
+	\item[Planering] Vi har noterat att koden lätt svämmar över alla bredder om man inte sköter om den med jämna mellanrum, och framför allt har en tydlig bild om hur strukturen skall se ut. Att försöka hålla klasserna \emph{löst kopplade} och undvika redundans är nödvändigt för att enklare kunna bygga ut och ändra i projektet. Detta är någonting vi kunde löst på bättre vis.
 \end{description}
 
 \end{document}
